# screenM

./: MANIFEST.in  README.md  environment.yaml  pyproject.toml  setup.py
screenm/: cli.py  utils.py
screenm/workflow/: config.yaml  screenm.smk
screenm/workflow/scripts/: distill_results.py  fastp_json.py  html_report.py  kmedoids.py  mash_heatmap.py  mash_to_json.py  merge_json.py  nonpareil_project.py  results_to_figures.py  sample_json.py  spf_to_json.py
